# PrunedDecisionTree

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
src/pruned_decision_tree/: __init__.py  pruned_tree.py  utils.py
tests/: test_pruned_decision_tree.py
